// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div class="dropzone">
  <droppedfiles-stub dataset="[object Object]"></droppedfiles-stub>
  <droparea-stub acceptedfiletypes="application/pdf,image/*,video/*,.avi,.bmp,.dcm,.gz,.hevc,.jpeg,.jpg,.mkv,.mov,.mp4,.ndpi,.nii.gz,.nii,.pdf,.png,.rvg,.svs,.tif,.tiff,.webp" multiple="true" openfilepickeronclick="true" class="dropzone__droparea"></droparea-stub>
</div>
`;

exports[`matches snapshot with hideTags and hideFolder 1`] = `
<div class="dropzone">
  <droppedfiles-stub dataset="[object Object]" hidetags="true" hidefolder="true"></droppedfiles-stub>
  <droparea-stub acceptedfiletypes="application/pdf,image/*,video/*,.avi,.bmp,.dcm,.gz,.hevc,.jpeg,.jpg,.mkv,.mov,.mp4,.ndpi,.nii.gz,.nii,.pdf,.png,.rvg,.svs,.tif,.tiff,.webp" multiple="true" openfilepickeronclick="true" class="dropzone__droparea"></droparea-stub>
</div>
`;

exports[`matches snapshot with multiple sets added 1`] = `
<div class="dropzone dropzone--active">
  <droppedfiles-stub dataset="[object Object]"></droppedfiles-stub>
  <droparea-stub acceptedfiletypes="application/pdf,image/*,video/*,.avi,.bmp,.dcm,.gz,.hevc,.jpeg,.jpg,.mkv,.mov,.mp4,.ndpi,.nii.gz,.nii,.pdf,.png,.rvg,.svs,.tif,.tiff,.webp" multiple="true" openfilepickeronclick="true" class="dropzone__droparea"></droparea-stub>
</div>
`;
